# netgate-xml-to-xlsx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  do-mypy.sh  noxfile.py  plugins-to-run.toml  plugins.toml  pylint.rc  pyproject.toml  tbump.toml
netgate_xml_to_xlsx/: __init__.py  _version.py  elements.py  main.py  parse_args.py  pfsense.py  plugin_tools.py  spreadsheet.py
netgate_xml_to_xlsx/plugins/: base_plugin.py
netgate_xml_to_xlsx/plugins/plugin_aliases/: aliases.py
netgate_xml_to_xlsx/plugins/plugin_gateways/: gateways.py
netgate_xml_to_xlsx/plugins/plugin_haproxy/: __init__.py  haproxy.py
netgate_xml_to_xlsx/plugins/plugin_installed_packages/: installed_packages.py
netgate_xml_to_xlsx/plugins/plugin_interfaces/: interfaces.py
netgate_xml_to_xlsx/plugins/plugin_openvpn_servers/: openvpn_servers.py
netgate_xml_to_xlsx/plugins/plugin_rules/: rules.py
netgate_xml_to_xlsx/plugins/plugin_system/: system.py
netgate_xml_to_xlsx/plugins/plugin_system_groups/: system_groups.py
netgate_xml_to_xlsx/plugins/plugin_system_users/: system_users.py
netgate_xml_to_xlsx/plugins/plugin_unbound/: unbound.py
netgate_xml_to_xlsx/plugins/support/: elements.py
src/netgate_xml_to_xlsx/: _version.py  logging.py  main.py  parse_args.py  pfsense.py  sheetdata.py  spreadsheet.py
src/netgate_xml_to_xlsx/formats/: __init__.py  html.py  (+3 more)
src/tests/: test_load_standard_nodes.py  test_netgate_xml_to_xlsx.py  test_sanitize_xml.py
tests/: test_load_standard_nodes.py  test_netgate_xml_to_xlsx.py  test_plugin_sanitize.py  test_sanitize_xml.py
(+142 files in other folders)
