[tool.poetry]
name = "netgate-xml-to-xlsx"
version = "0.1.0"
description = "Translate Netgate firewall rules to spreadsheet for review."
authors = ["Raymond GA Côté <ray@AppropriateSolutions.com>"]
keywords = ["firewall", "netgate"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://gitlab.com/appropriate-solutions-inc/open/netgate-xml-to-xlsx"
repository = "https://gitlab.com/appropriate-solutions-inc/open/netgate-xml-to-xlsx.git"
include = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.12.0"
openpyxl = "^3.0.9"


[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22"
flake8 = "^4"
pylint = "^2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netgate-xml-to-xlsx = "netgate_xml_to_xlsx.main:main"

[tool.black]
target-version = ["py310",]
